--- a/250.html
+++ b/250.html
@@ -102,7 +102,7 @@ td a img {
 </tbody></table>
 <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td width="597" height="40" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong><strong>#Compromiso Social Estudiantil  | </strong></strong><a href="https://sociales.unc.edu.ar/content/compromiso-social-estudiantil-info-importante-para-la-acreditaci-n-en-2025" target="_blank" style="text-decoration:none;color:#000">Info importante para la acreditación en 2025</a><br />
+    <td width="597" height="40" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong><strong>#Compromiso Social Estudiantil  | </strong></strong><a href="https://sociales.unc.edu.ar/content/compromiso-social-estudiantil-info-importante-para-la-acreditaci-n-en-2025" target="_blank" style="text-decoration:none;color:#000">Info importante para la acreditación del ciclo 2025</a><br />
       <strong><strong>#Colación  | </strong></strong><a href="https://sociales.unc.edu.ar/content/tr-mite-de-egreso" target="_blank" style="text-decoration:none;color:#000">Información sobre trámite de egreso para la primera colación de 2026</a><br />
       <strong><strong>#Egreso  | </strong></strong><a href="https://www.unc.edu.ar/académicas/regresar-unc-proyecto-de-promoción-y-acompañamiento-al-egreso" target="_blank" style="text-decoration:none;color:#000">Regresar UNC: Proyecto de promoción y acompañamiento al egreso</a><br />
       <strong><strong>#Inscripciones  | </strong></strong><a href="https://sociales.unc.edu.ar/node/3748" target="_blank" style="text-decoration:none;color:#000">Sumate al banco de veedores de la FCS</a><br />
