--- a/250.html
+++ b/250.html
@@ -93,6 +93,21 @@ td a img {
     <td height="29" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/sociales-se-opone-al-proyecto-de-ley-de-baja-de-la-edad-de-punibilidad" target="_blank"><strong id="docs-internal-guid-9a72e590-7fff-185e-5170-cb6102613f2a2">Sociales se opone al Proyecto de Ley de Baja de la edad de punibilidad</strong></a></h2></td>
   </tr>
 </table>
+<table width="607" border="0" align="center" cellspacing="4">
+  <tbody>
+    <tr>
+      <td height="21"><img src="https://sociales.unc.edu.ar/sites/default/files/sucedio.jpg" width="600" height="30" style="display: block; border-radius: 4px;" /></td>
+    </tr>
+  </tbody>
+</table>
+<table width="604" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tr>
+    <td width="170" height="120" ><img src="https://sociales.unc.edu.ar/sites/default/files/sociales-y-laboratorio-pop-presentes-en-la-decimoseptima-marcha-del-orgullo-lbgtq.jpg" width="170" height="120" alt="" style="display: block; border-radius: 4px;"/></td>
+    <td width="123" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/resultados-becas-seu-2026-tres-proyectos-financiados-para-hacer-extensi-n-en-sociales" target="_blank">Becas SEU 2026 | Tres proyectos financiados para hacer extensión en Sociales</a></h2></td>
+    <td width="170" >&nbsp;</td>
+    <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/nuevas-leyes-para-el-trabajo-social-en-c-rdoba" target="_blank"></a></h2></td>
+  </tr>
+</table>
 <table width="600" border="0" align="center" cellspacing="0">
   <tbody><tr>
  
@@ -132,6 +147,7 @@ td a img {
     <td width="597" height="20" align="left" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#Convocatoria </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/presentaci-n-de-propuestas-para-seminarios-optativos-cursos-libres-sem-sobre-problemas" target="_blank" style="text-decoration:none;color:#000">Presentación de propuestas para Seminarios Optativos, Cursos Libres, Sem. sobre Problemas Sociales y Sem. de Extensión 2026</a><br />
       <strong>#CEA </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/convocatoria-para-la-presentaci-n-de-nuevos-programas-de-investigaci-n-2" target="_blank" style="text-decoration:none;color:#000">Convocatoria para la presentación de nuevos programas de investigación radicados en el CEA</a><br />
         <strong>#Convocatoria </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/docentesinvestigadoresas/informesanualesyplanesdetrabajo" target="_blank" style="text-decoration:none;color:#000">Presentación de Informe Académico 2025 y Plan Docente 2026</a><br />
+        <strong>#Convocatoria </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/convocatoria-programa-de-subsidios-proyectos-de-extensi-n-2026-2028" target="_blank" style="text-decoration:none;color:#000">Programa de Subsidios a Proyectos de Extensión 2026-2028</a><br />
         <strong>#Concurso </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/concurso-profesora-adjuntoa-ds-sociolog-de-las-organizaciones" target="_blank" style="text-decoration:none;color:#000">Profesor/a Adjunto/a (DS) | Sociología de las Organizaciones</a><br />
         <strong>#Concurso </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/concurso-profesora-adjuntoa-ds-teor-y-procesos-de-cambio-social" target="_blank" style="text-decoration:none;color:#000">Profesor/a Adjunto/a (DS) | Teorías y Procesos de Cambio Social</a><br />
         <strong>#Concurso </strong> <strong>| </strong><a href="https://sociales.unc.edu.ar/content/concurso-profesora-adjuntoa-ds-derechos-humanos" target="_blank" style="text-decoration:none;color:#000">Profesor/a Adjunto/a (DS) | Derechos Humanos</a><br />
@@ -186,8 +202,9 @@ td a img {
     <tr>
       <td width="595" height="20" style="font-family:Verdana, Geneva, sans-serif; font-size:12px; text-decoration:none; line-height:20px"><p><strong>#IPSIS |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-elecciones-complementarias-para-la-coordinaci-n-del-rea-estudios-sobre-pol-tica" target="_blank">Convocatoria a elecciones complementarias para la Coordinación del Área Estudios sobre Política y Sociedad</a><br />
       <strong>#Campaña |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/el-ipsis-convoca-adherir-la-campa-no-la-baja" target="_blank">El IPSIS convoca a adherir a la Campaña NO a la Baja</a><br />
-      <strong>#Convocatoria |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-2026-financiamiento-proyectos-de-gesti-n-de-actividades-art-sticas-y-culturales" target="_blank">Financiamiento a Proyectos de Gestión de Actividades Artísticas y Culturales</a><br />
-      <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/segundo-congreso-nacional-de-estudios-interdisciplinares-sobre-diversidad-y-disidencias" target="_blank">Segundo Congreso Nacional de Estudios Interdisciplinarios sobre Diversidad Sexual y de Género</a><br />
+      <strong>#Innovatrices 2026 |</strong> <a style="text-decoration:none;color:#000" href="https://www.unc.edu.ar/secretar%C3%ADa-de-innovaci%C3%B3n-y-vinculaci%C3%B3n-tecnol%C3%B3gica/innovatrices-2026-abre-sus-inscripciones-el" target="_blank">Abre sus inscripciones el programa de formación en emprendedorismo para mujeres y personas no binarias</a><br />
+          <strong>#Convocatoria |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/convocatoria-2026-financiamiento-proyectos-de-gesti-n-de-actividades-art-sticas-y-culturales" target="_blank">Financiamiento a Proyectos de Gestión de Actividades Artísticas y Culturales</a><br />
+          <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://sociales.unc.edu.ar/content/segundo-congreso-nacional-de-estudios-interdisciplinares-sobre-diversidad-y-disidencias" target="_blank">Segundo Congreso Nacional de Estudios Interdisciplinarios sobre Diversidad Sexual y de Género</a><br />
       <strong>#Agenda |</strong> <a style="text-decoration:none;color:#000" href="https://congreso2026.fes-sociologia.com/" target="_blank">XVI Congreso Español de Sociología de la FES</a></p></td>
     </tr>
   </tbody>
