--- a/250.html
+++ b/250.html
@@ -108,6 +108,11 @@ td a img {
     <td width="126" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/inici-la-diplomatura-universitaria-esi-para-las-organizaciones-sociales" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/qu-se-dice-y-qu-no-se-dice-sobre-la-cuesti-n-energ-tica" target="_blank"></a><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/nuevas-leyes-para-el-trabajo-social-en-c-rdoba" target="_blank"></a></h2></td>
   </tr>
 </table>
+<table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
+  <tr>
+    <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/sites/default/files/calendario_academico_2026_0.pdf" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/calendario-academico-2026.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
+  </tr>
+</table>
 <table width="600" border="0" align="center" cellspacing="0">
   <tbody><tr>
  
