--- a/250.html
+++ b/250.html
@@ -73,6 +73,15 @@ td a img {
     <td width="295" height="48" align="left" valign="top"><h4 style="font-family:Verdana, Geneva, sans-serif; font-size:12px; "><strong>Ya está disponible el Calendario Académico 2026 de la FCS, con las fechas de cursado, inscripciones, exámenes y actividades académicas. Consultalo y planificá tu año.</strong></h4></td>
   </tr>
 </tbody></table>
+<table width="600" height="35" border="0" align="center" cellpadding="0" cellspacing="3">
+  <tbody>
+    <tr>
+      <td width="27" height="29"><img src="https://sociales.unc.edu.ar/sites/default/files/icondestacadosinferiores.jpg" width="23" height="29" /></td>
+      <td height="29" align="left" valign="top" style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:12px;"><a style="color:#087CCD; text-decoration:none" href="https://sociales.unc.edu.ar/content/la-fcs-suma-una-diplomatura-en-estudios-avanzados-sus-carreras-de-posgrado" target="_blank">La FCS suma una diplomatura en estudios avanzados a sus carreras de posgrado<br />
+      </a></h2></td>
+    </tr>
+  </tbody>
+</table>
 <table width="602" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
     <td height="53" align="center" ><h2 style="font-family:Verdana, Geneva, sans-serif; font-size:14px;"><strong><a href="https://sociales.unc.edu.ar/content/ingreso-2026-reanudamos-las-inscripciones-en-febrero" target="_blank"><img src="https://sociales.unc.edu.ar/sites/default/files/ingreso-2026-inscripciones-abiertas.jpg" width="600" height="90" alt="" style="display: block; border-radius: 4px;"/></a></h2></td>
